load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)

haskell_binary(
    name = "main",
    srcs = ["Main.hs"],
    data = ["//resources:input"],
    ghcopts = [
        "-threaded",
        "-rtsopts",
        "-with-rtsopts=-N",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src:base",
        "//src:day01",
    ],
)
