load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_toolchain_library",
)

package(
    default_visibility = [
        "//app:__pkg__",
        "//test:__pkg__",
    ],
)

haskell_toolchain_library(
    name = "base",
)

haskell_toolchain_library(
    name = "split",
)

haskell_library(
    name = "day01",
    srcs = ["Day01.hs"],
    deps = [
        ":base",
        ":split",
    ],
)

haskell_library(
    name = "day02",
    srcs = ["Day02.hs"],
    deps = [
        ":base",
    ],
)

haskell_library(
    name = "day03",
    srcs = ["Day03.hs"],
    deps = [
        ":base",
    ],
)
