load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
)
load("//macros:defs.bzl", "haskell_spec_test")

haskell_toolchain_library(
    name = "hspec",
)

haskell_spec_test(
    name = "day01_test",
    srcs = ["Day01Spec.hs"],
    deps = [
        "//src:base",
        "//src:day01",
    ],
)

haskell_spec_test(
    name = "day02_test",
    srcs = ["Day02Spec.hs"],
    deps = [
        "//src:base",
        "//src:day02",
    ],
)

haskell_spec_test(
    name = "day03_test",
    srcs = ["Day03Spec.hs"],
    deps = [
        "//src:base",
        "//src:day03",
    ],
)

haskell_spec_test(
    name = "day04_test",
    srcs = ["Day04Spec.hs"],
    deps = [
        "//src:array",
        "//src:base",
        "//src:day04",
    ],
)
